# BioRazer-SymmetricBioAssembly

./: .gitignore  pyproject.toml
biorazer_sba/graphics/: rotation.py
biorazer_sba/models/: basic.py  helix.py  model.py
biorazer_sba/scripts/: __init__.py  run_fcoilscan.py  run_fcrick.py
biorazer_sba/util/helix/cccp/: __init__.py  generator.py  read_ca.py
biorazer_sba/utils/: __init__.py  alignment.py  geometry.py  math.py
biorazer_sba/utils/helix/: direction.py
biorazer_sba/utils/helix/cccp/: fit_crick.py  fitter.py  generate_crick_bb.py  scan_crick.py
