[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biorazer-symmetric-bio-assembly"
description = "A package for assembling and analyzing symmetric biological structures."
authors = [
    "Maxim Wang <wangfanlin2022@sibcb.ac.cn>"
]
version = "0.1.0"
readme = "README.md"
packages = [
    { include = "biorazer_sba" }
]

[tool.poetry.dependencies]
python = "^3.11"
biotite = "*"
scipy = "^1.16.1"
numpy = "^2.3.2"
matplotlib = "^3.10.5"
